# Langchain-Langgraph

./: .env  .gitignore  pyproject.toml  requirements.txt
0-Dataingestion-parsing/: 1-dataparsingText.ipynb  2-dataparsingpdf.ipynb  3-dataparsingword.ipynb
0-Dataingestion-parsing/data/Word_files/: Machine_learning.docx
0-Dataingestion-parsing/data/text_files/: Java.txt  JavaScript.txt  MachineLearning.txt  Python.txt
1-vector embeddings/: 1-chromadb_RAG.ipynb  2-faiss.ipynb
2-semanticchunking/: 1-semanticchunking.ipynb
3-hybrid search strategies/: 1-densesparse.ipynb  2-reranking.ipynb  3-mmr.ipynb
4-query enhancement/: 1-queryexpansion.ipynb  2-querydecomposition.ipynb  3-HyDE.ipynb
5-Multimodel/: 1-multimodel.ipynb
6-Langchain usecase/: 1-Agent creation.ipynb  2-messages.ipynb  3-structuredoutput.ipynb
