[project]
name = "langchain-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "git-filter-repo>=2.47.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "libmagic>=1.0",
    "pandas>=3.0.1",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "python-magic-bin>=0.4.14",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "transformers>=5.4.0",
    "unstructured[docx]>=0.22.6",
    "wikipedia>=1.4.0",
]
